# djquark_workers

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
djquark_workers/: __init__.py  admin.py  apps.py  conf.py  logging.py  models.py  urls.py  views.py
djquark_workers/management/: __init__.py
djquark_workers/management/commands/: __init__.py  cleanup_workers.py
djquark_workers/migrations/: 0001_initial.py  __init__.py
djquark_workers/services/: __init__.py  logging_manager.py  logging_subscriber.py  worker_registry.py
djquark_workers/templates/djquark_workers/: logging_settings.html  worker_status.html
docs/: FUNCTIONAL_SPEC.md  QUICK_REFERENCE.md
tests/: __init__.py  settings.py  test_conf.py  test_logging_filter.py  test_logging_manager.py  test_worker_registry.py  urls.py
